@@ -99,7 +99,7 @@ href="http://svn.gnu.org.ua/viewvc/tex4ht">source repository</a>.
 <h3 id="changelog">Changelog</h3>
 
 <!--#include virtual="changes.html"-->
+<p><a href="changelog.html">Full ChangeLog</a>.</p>
 
 <hr><small>$Date: 2019/01/21 14:46:30 $;</small>
 <!--#include virtual="/footer.html"-->
-<p><a href="changelog.html">Full ChangeLog</a>.</p>
